--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.11.0",
   "license": "BSD-2-Clause",
   "main": "chess.js",
-  "homepage": "https://github.com/jhlywa/chess.js",
+  "description" : "forked from https://github.com/jhlywa/chess.js to fix no-king positions",
+  "homepage": "https://github.com/shushu15/chess.js.git",
   "keywords": [
     "chess"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jhlywa/chess.js.git"
+    "url": "https://github.com/shushu15/chess.js.git"
   },
   "devDependencies": {
     "jest": "^25.1.0"
